feat(82) added controller, corrected yml, added insertIntoOrder in cart
